--- a/receiver-server/Dockerfile.receiver
+++ b/receiver-server/Dockerfile.receiver
@@ -3,10 +3,12 @@ FROM node:18
 WORKDIR /app
 
 COPY package*.json ./
+
 RUN npm install --legacy-peer-deps
 
-
 COPY . .
+
+RUN npm run build
 
 EXPOSE 8001
 
